redirect search optimization

--- a/src/content/en/fundamentals/discovery/_redirects.yaml
+++ b/src/content/en/fundamentals/discovery/_redirects.yaml
@@ -2,3 +2,6 @@ redirects:
 
 - from: /web/fundamentals/discovery/
   to: /web/fundamentals/
+
+- from: /web/fundamentals/discovery/search-optimization
+  to: https://web.dev/lighthouse-seo/
