--- a/src/content/en/fundamentals/performance/_redirects.yaml
+++ b/src/content/en/fundamentals/performance/_redirects.yaml
@@ -2,3 +2,7 @@ redirects:
 
 - from: /web/fundamentals/performance/
   to: /web/fundamentals/performance/why-performance-matters
+
+- from: /web/fundamentals/performance/optimizing-content-efficiency/http-caching
+  to: https://web.dev/http-cache/
+  status: external
