--- a/src/content/en/tools/workbox/_index.yaml
+++ b/src/content/en/tools/workbox/_index.yaml
@@ -136,32 +136,19 @@ landing_page:
       cache.</p>
 
       <pre class="prettyprint lang-javascript">
-        import {registerRoute} from 'workbox-routing';
-        import {CacheFirst, StaleWhileRevalidate} from 'workbox-strategies';
-        import {CacheableResponsePlugin} from 'workbox-cacheable-response';
         import {ExpirationPlugin} from 'workbox-expiration';
+        import {registerRoute} from 'workbox-routing';
+        import {StaleWhileRevalidate} from 'workbox-strategies';
 
-        // Cache the Google Fonts stylesheets with a stale while revalidate strategy.
+        // Cache Google Fonts with a stale-while-revalidate strategy, with
+        // a maximum number of entries.
         registerRoute(
-          /^https:\/\/fonts\.googleapis\.com/,
+          ({url}) => url.origin === 'https://fonts.googleapis.com' ||
+                     url.origin === 'https://fonts.gstatic.com',
           new StaleWhileRevalidate({
-            cacheName: 'google-fonts-stylesheets',
-          }),
-        );
-
-
-        // Cache the Google Fonts webfont files with a cache first strategy for 1 year.
-        registerRoute(
-          /^https:\/\/fonts\.gstatic\.com/,
-          new CacheFirst({
-            cacheName: 'google-fonts-webfonts',
+            cacheName: 'google-fonts',
             plugins: [
-              new CacheableResponsePlugin({
-                statuses: [0, 200],
-              }),
-              new ExpirationPlugin({
-                maxAgeSeconds: 60 * 60 * 24 * 365,
-              }),
+              new ExpirationPlugin({maxEntries: 20}),
             ],
           }),
         );
@@ -175,7 +162,11 @@ landing_page:
         import {registerRoute} from 'workbox-routing';
         import {StaleWhileRevalidate} from 'workbox-strategies';
 
-        registerRoute(/\.(?:js|css)$/, new StaleWhileRevalidate());
+        registerRoute(
+          ({request}) => request.destination === 'script' ||
+                         request.destination === 'style',
+          new StaleWhileRevalidate()
+        );
       </pre>
 
       <h3>Cache Images</h3>
@@ -184,15 +175,19 @@ landing_page:
       them indefinitely, consuming your users' storage.</p>
 
       <pre class="prettyprint lang-javascript">
-        import {registerRoute} from 'workbox-routing';
+        import {CacheableResponsePlugin} from 'workbox-cacheable-response';
         import {CacheFirst} from 'workbox-strategies';
         import {ExpirationPlugin} from 'workbox-expiration';
+        import {registerRoute} from 'workbox-routing';
 
         registerRoute(
-          /\.(?:png|gif|jpg|jpeg|svg)$/,
+          ({request}) => request.destination === 'image',
           new CacheFirst({
             cacheName: 'images',
             plugins: [
+              new CacheableResponsePlugin({
+                statuses: [0, 200],
+              }),
               new ExpirationPlugin({
                 maxEntries: 60,
                 maxAgeSeconds: 30 * 24 * 60 * 60, // 30 Days
