--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -26,28 +26,122 @@ redirects:
 - from: /web/fundamentals/resources/...
   to: /web/resources/
 
-- from: /web/fundamentals/media
-  to: /web/fundamentals/media/video
+- from: /web/g-co/twa
+  to: /web/android/trusted-web-activity/
 
-- from: /web/updates/2016/02/save-data
-  to: /web/fundamentals/performance/optimizing-content-efficiency/save-data
+#
+# Redirects for content migrated to web.dev
+#
+## Redirects for Fundamentals content migrated to web.dev
 
-- from: /web/updates/2017/06/user-centric-performance-metrics
-  to: https://web.dev/user-centric-performance-metrics/
+- from: /web/fundamentals/engage-and-retain/app-install-banners/...
+  to: https://web.dev/customize-install/
+
+- from: /web/fundamentals/engage-and-retain/web-app-manifest/...
+  to: https://web.dev/add-manifest/
+
+- from: /web/fundamentals/instant-and-offline/web-storage/cache-api
+  to: https://web.dev/cache-api-quick-guide/
+
+- from: /web/fundamentals/instant-and-offline/web-storage/offline-for-pwa
+  to: https://web.dev/storage-for-the-web/
+
+- from: /web/fundamentals/performance/prpl-pattern
+  to: https://web.dev/apply-instant-loading-with-prpl/
 
 - from: /web/fundamentals/performance/user-centric-performance-metrics
   to: https://web.dev/user-centric-performance-metrics/
 
+## Redirects for Updates content migrated to web.dev
+
+- from: /web/updates/2011/11/Quota-Management-API-Fast-Facts
+  to: https://web.dev/storage-for-the-web/
+
+- from: /web/updates/2014/11/Support-for-installable-web-apps-with-webapp-manifest-in-chrome-38-for-Android
+  to: https://web.dev/customize-install/
+
+- from: /web/updates/2015/03/increasing-engagement-with-app-install-banners-in-chrome-for-android
+  to: https://web.dev/customize-install/
+
+- from: /web/updates/2015/08/using-manifest-to-set-sitewide-theme-color
+  to: https://web.dev/add-manifest/#splash-screen
+
+- from: /web/updates/2015/09/using-manifest-to-set-sitewide-theme-color
+  to: https://web.dev/add-manifest/#splash-screen
+
+- from: /web/updates/2015/10/display-mode
+  to: https://web.dev/add-manifest/#display
+
+- from: /web/updates/2015/10/splashscreen
+  to: https://web.dev/add-manifest/#splash-screen
+
+- from: /web/updates/2016/06/persistent-storage
+  to: https://web.dev/persistent-storage/
+
+- from: /web/updates/2016/09/navigator-share
+  to: https://web.dev/web-share/
+
+- from: /web/updates/2016/10/navigator-share
+  to: https://web.dev/web-share/
+
+- from: /web/updates/2017/02/improved-add-to-home-screen
+  to: https://web.dev/customize-install/
+
+- from: /web/updates/2017/04/getinstalledrelatedapps
+  to: https://web.dev/get-installed-related-apps/
+
+- from: /web/updates/2017/06/user-centric-performance-metrics
+  to: https://web.dev/user-centric-performance-metrics/
+
+- from: /web/updates/2018/05/dpwa
+  to: https://web.dev/progressive-web-apps/
+
 - from: /web/updates/2018/05/first-input-delay
   to: https://web.dev/fid/
 
-- from: /web/g-co/twa
-  to: /web/updates/2017/10/using-twa
+- from: /web/updates/2018/11/writable-files
+  to: https://web.dev/native-file-system/
 
-- from: /web/updates/2020/twa-android-browser-helper
-  to: /web/updates/2020/01/twa-android-browser-helper
+- from: /web/updates/2018/12/badging-api
+  to: https://web.dev/badging-api/
 
-# Progressive Web App Content
+- from: /web/updates/2018/12/get-installed-related-apps
+  to: https://web.dev/get-installed-related-apps/
+
+- from: /web/updates/2018/12/wakelock
+  to: https://web.dev/wakelock/
+
+- from: /web/updates/2018/12/web-share-target
+  to: https://web.dev/web-share-target/
+
+- from: /web/updates/2019/01/shape-detection
+  to: https://web.dev/shape-detection/
+
+- from: /web/updates/2019/02/trusted-types
+  to: https://web.dev/trusted-types/
+
+- from: /web/updates/2019/03/prefers-reduced-motion
+  to: https://web.dev/prefers-reduced-motion/
+
+- from: /web/updates/2019/05/web-share-files
+  to: https://web.dev/web-share/#sharing-files
+
+- from: /web/updates/2019/07/image-support-for-async-clipboard
+  to: https://web.dev/image-support-for-async-clipboard/
+
+- from: /web/updates/2019/08/contact-picker
+  to: https://web.dev/contact-picker/
+
+- from: /web/updates/2019/08/native-file-system
+  to: https://web.dev/native-file-system/
+
+- from: /web/updates/2019/08/periodic-background-sync
+  to: https://web.dev/periodic-background-sync/
+
+## Redirects for PWA content migrated to web.dev
+
+- from: /web/g-co/dpwa
+  to: https://web.dev/progressive-web-apps/
 
 - from: /web/progressive-web-apps/checklist
   to: https://web.dev/pwa-checklist/
@@ -64,32 +158,13 @@ redirects:
 - from: /web/fundamentals/web-app-manifest/...
   to: https://web.dev/add-manifest/
 
-- from: /web/g-co/dpwa
-  to: https://web.dev/progressive-web-apps/
 
-- from: /web/updates/2018/05/dpwa
-  to: https://web.dev/progressive-web-apps/
+#
+# Other redirects
+#
 
-- from: /web/updates/2014/11/Support-for-installable-web-apps-with-webapp-manifest-in-chrome-38-for-Android
-  to: https://web.dev/customize-install/
+- from: /web/fundamentals/media
+  to: /web/fundamentals/media/video
 
-- from: /web/updates/2015/03/increasing-engagement-with-app-install-banners-in-chrome-for-android
-  to: https://web.dev/customize-install/
-
-- from: /web/updates/2015/09/using-manifest-to-set-sitewide-theme-color
-  to: https://web.dev/add-manifest/#splash-screen
-
-- from: /web/updates/2015/08/using-manifest-to-set-sitewide-theme-color
-  to: https://web.dev/add-manifest/#splash-screen
-
-- from: /web/updates/2015/10/splashscreen
-  to: https://web.dev/add-manifest/#splash-screen
-
-- from: /web/updates/2015/10/display-mode
-  to: https://web.dev/add-manifest/#display
-
-- from: /web/updates/2017/02/improved-add-to-home-screen
-  to: https://web.dev/customize-install/
-
-- from: /web/updates/2019/02/trusted-types
-  to: https://web.dev/trusted-types/
+- from: /web/updates/2016/02/save-data
+  to: /web/fundamentals/performance/optimizing-content-efficiency/save-data
