Redirect the variable fonts guide and mark as external link

--- a/src/content/en/fundamentals/design-and-ux/_toc.yaml
+++ b/src/content/en/fundamentals/design-and-ux/_toc.yaml
@@ -11,7 +11,8 @@ toc:
     - title: What Makes a Good Mobile Site?
       path: /web/fundamentals/design-and-ux/principles/
     - title: Introduction to variable fonts on the web
-      path: /web/fundamentals/design-and-ux/typography/variable-fonts/
+      path: https://web.dev/variable-fonts/
+      status: external
     - title: Additional Colors and Icons
       path: /web/fundamentals/design-and-ux/browser-customization/
   - include: /web/fundamentals/accessibility/_toc.yaml
