Heavy ad interventions (#8706)
* Add Rowan Merewood as contributor

* Handling Heavy Ad Interventions article

* Order contributors by family name

* Remove invalid tag, add widgets

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1395,6 +1395,22 @@ josephmedley:
   description:
     en: Technical Writer
 
+rowanmerewood:
+  name:
+    given: Rowan
+    family: Merewood
+  org:
+    name: Google
+    unit: Developer Relations
+  country: UK
+  role:
+    - author
+  twitter: rowan_m
+  github: rowan-m
+  email: merewood@google.com
+  description:
+    en: Rowan is a Developer Advocate
+
 developit:
   name:
     given: Jason
