--- a/src/content/en/fundamentals/instant-and-offline/_redirects.yaml
+++ b/src/content/en/fundamentals/instant-and-offline/_redirects.yaml
@@ -1,3 +1,7 @@
+#
+# ATTENTION: Put redirects for content migrated to web.dev in /en/_redirects.yaml
+#
+
 redirects:
 
 - from: /web/fundamentals/instant-and-offline/
