--- a/src/content/en/fundamentals/security/_redirects.yaml
+++ b/src/content/en/fundamentals/security/_redirects.yaml
@@ -1,3 +1,7 @@
+#
+# ATTENTION: Put redirects for content migrated to web.dev in /en/_redirects.yaml
+#
+
 redirects:
 
 - from: /web/fundamentals/security/
@@ -14,6 +18,3 @@ redirects:
 
 - from: /web/fundamentals/security/credential-management/store-credentials
   to: /web/fundamentals/security/credential-management/save-forms#store_the_credential
-
-- from: /web/fundamentals/security/encrypt-in-transit/why-https
-  to: https://web.dev/why-https-matters
