--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -34,6 +34,9 @@ redirects:
 #
 ## Redirects for Fundamentals content migrated to web.dev
 
+- from: /web/fundamentals/discovery/search-optimization
+  to: https://web.dev/lighthouse-seo/
+
 - from: /web/fundamentals/engage-and-retain/app-install-banners/...
   to: https://web.dev/customize-install/
 
@@ -46,11 +49,20 @@ redirects:
 - from: /web/fundamentals/instant-and-offline/web-storage/offline-for-pwa
   to: https://web.dev/storage-for-the-web/
 
+- from: /web/fundamentals/performance/optimizing-content-efficiency/http-caching
+  to: https://web.dev/http-cache/
+
 - from: /web/fundamentals/performance/prpl-pattern
   to: https://web.dev/apply-instant-loading-with-prpl/
 
 - from: /web/fundamentals/performance/user-centric-performance-metrics
   to: https://web.dev/user-centric-performance-metrics/
+
+- from: /web/fundamentals/primers/promises
+  to: https://web.dev/promises
+
+- from: /web/fundamentals/security/encrypt-in-transit/why-https
+  to: https://web.dev/why-https-matters
 
 ## Redirects for Updates content migrated to web.dev
 
@@ -162,9 +174,6 @@ redirects:
 #
 # Other redirects
 #
-
-- from: /web/fundamentals/media
-  to: /web/fundamentals/media/video
 
 - from: /web/updates/2016/02/save-data
   to: /web/fundamentals/performance/optimizing-content-efficiency/save-data
