--- a/src/content/en/fundamentals/media/_redirects.yaml
+++ b/src/content/en/fundamentals/media/_redirects.yaml
@@ -1,4 +1,8 @@
+#
+# ATTENTION: Put redirects for content migrated to web.dev in /en/_redirects.yaml
+#
+
 redirects:
 
-- from: /web/fundamentals/media/
-  to: /web/fundamentals/
+- from: /web/fundamentals/media
+  to: /web/fundamentals/media/video
