--- a/src/content/en/fundamentals/_redirects.yaml
+++ b/src/content/en/fundamentals/_redirects.yaml
@@ -158,3 +158,6 @@ redirects:
 
 - from: /web/fundamentals/design-and-ux/input/
   to: /web/fundamentals/design-and-ux/input/forms/
+
+- from: /web/fundamentals/design-and-ux/typography/variable-fonts
+  to: https://web.dev/variable-fonts/
