--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -34,6 +34,9 @@ redirects:
 #
 ## Redirects for Fundamentals content migrated to web.dev
 
+- from: /web/fundamentals/design-and-ux/typography/variable-fonts
+  to: https://web.dev/variable-fonts/
+
 - from: /web/fundamentals/discovery/search-optimization
   to: https://web.dev/lighthouse-seo/
 
