moving Responsive Web Design Basics
Deleting the content from here and redirecting to the new content on web.dev.

--- a/src/content/en/fundamentals/design-and-ux/_toc.yaml
+++ b/src/content/en/fundamentals/design-and-ux/_toc.yaml
@@ -39,7 +39,8 @@ toc:
   - title: Responsive Web Design
     section:
     - title: Overview
-      path: /web/fundamentals/design-and-ux/responsive/
+      path: https://web.dev/responsive-web-design-basics/
+      status: external
     - title: Patterns
       path: /web/fundamentals/design-and-ux/responsive/patterns
     - title: Responsive Images
