--- a/src/content/en/_upper_tabs-Tools.yaml
+++ b/src/content/en/_upper_tabs-Tools.yaml
@@ -1,8 +1,9 @@
 # Use caution making changes to this file, it's not fully tested and is one
 # of the key TOC files that affects the entire site.
-# {# wf_ignore_file #}
 toc:
 - name: Tools
+  menu:
+  - include: /web/tools/_menu_toc.yaml
   attributes:
   - name: data-category
     value: webFu
@@ -12,4 +13,3 @@ toc:
     guides:
     - title: Home
       path: /web/tools/
-
