--- a/src/content/en/fundamentals/payments/_toc.yaml
+++ b/src/content/en/fundamentals/payments/_toc.yaml
@@ -23,6 +23,7 @@ toc:
   - title: Payment Apps Developer Guide
     section:
     - title: Android payment apps developer guide
-      path: /web/fundamentals/payments/payment-apps-developer-guide/android-payment-apps
+      path: https://web.dev/android-payment-apps-overview/
+      status: external
     - title: Web based payment apps developer guide
       path: /web/fundamentals/payments/payment-apps-developer-guide/web-payment-apps
