--- a/src/content/en/fundamentals/performance/_toc.yaml
+++ b/src/content/en/fundamentals/performance/_toc.yaml
@@ -5,7 +5,8 @@ toc:
     - title: Overview
       path: /web/fundamentals/performance/why-performance-matters/
     - title: Measure Performance with the RAIL Model
-      path: /web/fundamentals/performance/rail
+      path: https://web.dev/rail/
+      status: external
     - title: Loading Performance
       section:
       - title: Overview
