Updates and enables Custom Tabs documentation
- Removes redirect from /web/android to /web/android/trusted-web/
- Re-enables menus for Custom Tabs
- Updates root, implementation-guide and best-practices
- Keeps low-level API unlisted (need to find and point to correct
  AIDL files).

--- a/src/content/en/android/_book.yaml
+++ b/src/content/en/android/_book.yaml
@@ -15,6 +15,6 @@ upper_tabs:
     - name: Trusted Web Activity
       contents:
       - include: /web/android/trusted-web-activity/_toc.yaml
-#      - name: Custom Tabs
-#        contents:
-#          - include: /web/android/custom-tabs/_toc.yaml
+    - name: Custom Tabs
+      contents:
+      - include: /web/android/custom-tabs/_toc.yaml
