--- a/src/content/en/resources/_redirects.yaml
+++ b/src/content/en/resources/_redirects.yaml
@@ -5,14 +5,8 @@ redirects:
 - from: /web/resources/contributors/
   to: /web/resources/contributors
 
-- from: /web/resources/styleguide/
-  to: /web/resources/style-guide
-
-- from: /web/resources/styleguide/sample-article
-  to: /web/resources/writing-an-article
-
 - from: /web/resources/translations/
   to: /web/resources/translations
 
-- from: /web/resources/jekyll/...
+- from: /web/resources/...
   to: /web/resources/
