--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2131,6 +2131,23 @@ kinukoyasuda:
   description:
     en: "Software Engineer at Google working on the web platform"
 
+jecelynyeen:
+  name:
+    given: Jecelyn
+    family: Yeen
+  org:
+    name: Google
+    unit: Developer Relations
+  country: Germany
+  role:
+    - author
+  homepage: https://jec.fyi
+  twitter: JecelynYeen
+  github: chybie
+  email: jec@google.com
+  description:
+    en: Developer advocate working on Chrome DevTools at Google
+
 maciejzasada:
   name:
     given: Maciej
