--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -34,6 +34,9 @@ redirects:
 #
 ## Redirects for Fundamentals content migrated to web.dev
 
+- from: /web/billions/...
+  to: https://web.dev/
+
 - from: /web/feedback/...
   to: https://web.dev/how-to-file-a-good-bug/
 
